1. feature: 终端历史支持过滤